@@ -1,3 +1,9 @@
+2013-09-29  Jeffrey Stedfast  <fejj@gnome.org>
+
+	* gmime/gmime-message.c (write_references): Custom writer for
+	References headers so that individual msgid tokens do not get
+	folded. Fixes bug #709031.
+
 2013-09-26  Jeffrey Stedfast  <fejj@gnome.org>
 
 	* gmime/gmime.c (g_mime_init): Initialize the mutexes
